--- a/style.css
+++ b/style.css
@@ -4,12 +4,19 @@
     box-sizing: border-box;
 }
 
+#myvideo {
+    width: 100%;
+    z-index: -99;
+   
+}
+
 nav {
     background-color: black;
     display: flex;
     align-items: center;
     justify-content: space-around;
     min-height: 8vh;
+    
    
     
 }
@@ -21,8 +28,9 @@ nav {
     display: flex;
     justify-content: space-around;
     width: 30%;
-    
-   
+    font-size: 14px;
+    margin-left: 600px;
+   z-index: 2;
 }
 
 .menu a {
@@ -47,6 +55,7 @@ nav {
       font-family: 'Montserrat';
       margin-left: 200px;
       margin-top: 110px;
+      font-size: 20px;
   }
 
   .items {
@@ -98,7 +107,7 @@ margin-top: 70px;
     border-radius: 5px;
     padding: 10px;
     border-style: none;
-    
+    z-index: 2;
     
 }
 
@@ -117,7 +126,7 @@ margin-top: 70px;
     right: 0;
     display: flex;
     align-items: center;
-    z-index: 1;
+   
 }
 
 a:hover {
@@ -131,3 +140,29 @@ a:hover {
     margin-top: 300px;
 }
 
+.nike {
+    display: flex;
+    justify-content: space-around;
+    margin-top: 200px;
+}
+
+@media screen and (max-width: 1200px) {
+    #myvideo {
+       
+        height: 100%;
+    }
+    .videodescrip {
+        font-size: 45px;
+    }
+
+    .explore {
+        font-size: 14px;
+    border-radius: 4px;
+    padding: 8px;
+    border-style: none;
+    z-index: 2;
+    }
+    nav {
+        width: 100%;
+    }
+}
