--- a/style.css
+++ b/style.css
@@ -200,6 +200,8 @@ a:hover {
     margin-left: 200px;
 }
 
+
+
 .foot {
     margin-top: 150px;
     background-color: black;
@@ -249,6 +251,12 @@ a:hover {
     font-family: 'Montserrat';
     margin-left: 80px;
     margin-top: 150px;
+}
+
+.dessuperstar {
+    font-family: 'Montserrat';
+    margin-left: -320px;
+    margin-top: 200px;
 }
 @media screen and (max-width: 1200px) {
 
@@ -614,6 +622,22 @@ align-items: center;
 @media all and (max-device-width: 480px) {
     
     
-   
+    .imgnike {
+        width: 350px;
+    }
+    .imgntf {
+        margin-top: 40px;
+        width: 350px;
+    }
+
+    .imgadidas {
+        margin-top: 40px;
+        width: 350px;
+    }
+
+    .imgfila {
+        margin-top: 40px;
+        width: 350px;
+    }
       
 }
